@startuml

class User {
    UserId id
    String name
    String email
    String password
    LocalDateTime lastLogin
}

class Arc {
    ArcId id
    UserId owner
    String name
    int totalEstimatedMinutes
    int totalCompletedMinutes
    ArcStatus status
}

class Chapter {
    ChapterId id
    ArcId arc
    int estimatedMinutes
    int completedMinutes
    LocalDate scheduledDate
}

class Task {
    TaskId id
    ChapterId chapter
    int estimatedMinutes
    int completedMinutes
    Instant scheduledAt
    Instant endAt
    TaskStatus status
    String name
    String description
    Set<TagId> tags
}

class Tag {
    TagId id
    UserId owner
    String label
    TagColor color
}

enum ArcStatus {
    ACTIVE
    COMPLETED
    ARCHIVED
}

enum TaskStatus {
    PLANNED
    IN_PROGRESS
    DONE
    SKIPPED
}

enum TagColor {
    RED
    ORANGE
    YELLOW
    GREEN
    TEAL
    BLUE
    PURPLE
    PINK
    GRAY
}

record UserId {
    UUID id
}

record ArcId {
    UUID id
}

record ChapterId {
    UUID id
}

record TaskId {
    UUID id
}

record TagId {
    UUID id
}

User    "1" *-- "0..*" Arc     : has
Arc     "1" *-- "0..*" Chapter : has
Chapter "1" *-- "0..*" Task    : contains
User    "1" *-- "0..*" Tag     : owns
Task    "0..*" --> "0..*" Tag  : tagged with

Arc  --> ArcStatus
Task --> TaskStatus
Tag  --> TagColor

@enduml